# ChangeLog for app-i18n/scim-hangul
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-i18n/cvs-repo/gentoo-x86/app-i18n/scim-hangul/ChangeLog,v 1.10 2006/06/03 10:51:48 matsuu Exp $

*scim-hangul-0.2.2 (03 Jun 2006)

  03 Jun 2006; MATSUU Takuto <matsuu@gentoo.org> +scim-hangul-0.2.2.ebuild:
  Version bumped, Bug 133912.
  Added to ~amd64.

*scim-hangul-0.2.1 (06 Nov 2005)

  06 Nov 2005; MATSUU Takuto <matsuu@gentoo.org> +scim-hangul-0.2.1.ebuild:
  Version bumped.
  Fixed HOMEPAGE and SRC_URI.

  27 Sep 2004; Mamoru KOMACHI <usata@gentoo.org> -scim-hangul-0.1.0.ebuild,
  -scim-hangul-0.1.1.ebuild, scim-hangul-0.1.2.ebuild:
  Marked 0.1.2 stable on x86, alpha and ppc. Removed old ebuilds.

*scim-hangul-0.1.2 (30 Aug 2004)

  30 Aug 2004; Mamoru KOMACHI <usata@gentoo.org> scim-hangul-0.1.0.ebuild,
  +scim-hangul-0.1.2.ebuild:
  Version bumped. Marked 0.1.0 stable on x86.

*scim-hangul-0.1.1 (23 Aug 2004)

  23 Aug 2004; Mamoru KOMACHI <usata@gentoo.org>
  -files/scim-hangul-0.0.3-gentoo.patch, -scim-hangul-0.0.2.ebuild,
  -scim-hangul-0.0.3.ebuild, +scim-hangul-0.1.1.ebuild:
  Version bumped. Removed old unstable versions.

*scim-hangul-0.1.0 (17 Aug 2004)

  17 Aug 2004; Mamoru KOMACHI <usata@gentoo.org> +scim-hangul-0.1.0.ebuild:
  Version bumped.

*scim-hangul-0.0.3 (14 Aug 2004)

  14 Aug 2004; Mamoru KOMACHI <usata@gentoo.org>
  +files/scim-hangul-0.0.3-gentoo.patch, +scim-hangul-0.0.3.ebuild:
  Version bumped.

  04 Aug 2004; David Holm <dholm@gentoo.org> scim-hangul-0.0.2.ebuild:
  Added to ~ppc.

*scim-hangul-0.0.2 (03 Aug 2004)

  03 Aug 2004; Mamoru KOMACHI <usata@gentoo.org> +metadata.xml,
  +scim-hangul-0.0.2.ebuild:
  Initial import.
