@@ -1,6 +1,7 @@
-DIST scim-hangul-0.1.2.tar.gz 621823
-DIST scim-hangul-0.2.1.tar.gz 1345947
+DIST scim-hangul-0.1.2.tar.gz 621823 RMD160 99a63fd5ff7b0d92ea8bda7ec95803d345bc25d6 SHA1 5e88cfcf68650c83f5df669a460ea408acef5043 SHA256 6bf832dd0190bf4f6616c5336222434219eec8458519edb2ab090c2c4540d70f
+DIST scim-hangul-0.2.1.tar.gz 1345947 RMD160 94a0812f69c482b8e2d424d06da17cde54d0bb21 SHA1 950dbe64de4110ce4811b0644dbd4c13e8e04614 SHA256 68d5e2b32484022b1185052671b1ceb4daa19cefee95c8446f0b18c106cbdf96
 DIST scim-hangul-0.2.2.tar.gz 1346718 RMD160 563afc753e1eec0067e61a176adb5df2e607fb68 SHA1 4218af5cf6d45e3bc8b89bef8a9a2ddc142cf8ad SHA256 0e8d4ebec4136459d32602ff2c0759893d14e64ea03013b14d071957b0588901
+DIST scim-hangul-0.3.0.tar.gz 1233406 RMD160 4316ecd0f680a76d686df20d9fd9d3507dfe4d1b SHA1 1014fff96c6438252a6ea570e073ddd26b7fd928 SHA256 b6b4187685a68951ca8e7f71e47eef719b2d1a732c4499e1d8f04cfe292cfec6
 EBUILD scim-hangul-0.1.2.ebuild 953 RMD160 f6959be623674d67ff5c4eaf0096333e226c0652 SHA1 a2bf0bfd77c5a917b6eeaba1a0537538974393e8 SHA256 20a9e24a69afd28598814a3ef314247472d26c7b74e48f8b67aaae0721b967b2
 MD5 b079cadaa2dc1efb374b022823f4f1b1 scim-hangul-0.1.2.ebuild 953
 RMD160 f6959be623674d67ff5c4eaf0096333e226c0652 scim-hangul-0.1.2.ebuild 953
@@ -13,20 +14,27 @@ EBUILD scim-hangul-0.2.2.ebuild 942 RMD160 bb3badada5d02200d233d4564f2f42f9dc767
 MD5 ef926b74cc051892a0a1a5470ec2b078 scim-hangul-0.2.2.ebuild 942
 RMD160 bb3badada5d02200d233d4564f2f42f9dc76744e scim-hangul-0.2.2.ebuild 942
 SHA256 13a3fa4a8f0cb1fe780e3a84c24dd70bd30dfbd652b0cc324c9bb464ac7548b5 scim-hangul-0.2.2.ebuild 942
-MISC ChangeLog 1707 RMD160 8ba2571b6923c5ab1966bb05fc9f6110857cf393 SHA1 5d245889e73d78a65b2fe972c4e4a7ef5af80a60 SHA256 09c7844a4ee1a1203a86e595f1a6fb4165aeca764d9f3a0a131013e01d83f98d
-MD5 e8177ce55838bc2a28f3fc4a0ca2ccc9 ChangeLog 1707
-RMD160 8ba2571b6923c5ab1966bb05fc9f6110857cf393 ChangeLog 1707
-SHA256 09c7844a4ee1a1203a86e595f1a6fb4165aeca764d9f3a0a131013e01d83f98d ChangeLog 1707
+EBUILD scim-hangul-0.3.0.ebuild 1127 RMD160 c89582a0dd3a74ab8483df96f2d31e02b762b615 SHA1 5609bd61ae0114d510a85823a81830a1f7e46cfc SHA256 f15abb93253595522e94ad6f400757b4de1e7a41cf71ef7e27bde9a8815423a7
+MD5 6980d2c66f88b4baf3f21b0b5e0140bb scim-hangul-0.3.0.ebuild 1127
+RMD160 c89582a0dd3a74ab8483df96f2d31e02b762b615 scim-hangul-0.3.0.ebuild 1127
+SHA256 f15abb93253595522e94ad6f400757b4de1e7a41cf71ef7e27bde9a8815423a7 scim-hangul-0.3.0.ebuild 1127
+MISC ChangeLog 1878 RMD160 552969c0167e675d1cb2b377b9c1fb551b22a276 SHA1 4603d5ff45a6589404fee1ad2c0c867efbf16fff SHA256 ede387410c3231e13ff2ce25d8abaaeb7cdd783555e6f955e7573f83184f0cef
+MD5 2dd127e2470471422d70fbe594b29414 ChangeLog 1878
+RMD160 552969c0167e675d1cb2b377b9c1fb551b22a276 ChangeLog 1878
+SHA256 ede387410c3231e13ff2ce25d8abaaeb7cdd783555e6f955e7573f83184f0cef ChangeLog 1878
 MISC metadata.xml 156 RMD160 8adcf0a760a605cd42501f53097ca3a1c4e8daad SHA1 8ccc2b0f20743002b783b1f7b5162c71f7f54c2e SHA256 815820f2e5866d973fafb29a8b8027d022ccea43023309b6dc294cf077598215
 MD5 e92a48548554c80cf90e18df17ff6a82 metadata.xml 156
 RMD160 8adcf0a760a605cd42501f53097ca3a1c4e8daad metadata.xml 156
 SHA256 815820f2e5866d973fafb29a8b8027d022ccea43023309b6dc294cf077598215 metadata.xml 156
-MD5 aa20d810924e12d946707d8b9e60334c files/digest-scim-hangul-0.1.2 69
-RMD160 9d1e4731568e2ce73ef7562745b1ffba6acb0583 files/digest-scim-hangul-0.1.2 69
-SHA256 29ca269312f0169035f1691f44671796a5abd90c81eb4657107f1274ef9ca75e files/digest-scim-hangul-0.1.2 69
-MD5 9c6915f3852e9584709b8ae7b8a6df00 files/digest-scim-hangul-0.2.1 70
-RMD160 305b7588bc244ed0314bdcdb82258037127f2c76 files/digest-scim-hangul-0.2.1 70
-SHA256 99d7e19ebdee34f8473275a4568adf2dee6294bbc16ce4be223890268d2c50c7 files/digest-scim-hangul-0.2.1 70
+MD5 511d6861c9bf031a1c31235347b049e1 files/digest-scim-hangul-0.1.2 253
+RMD160 b5c05b5bbe211aeaf31eae7996bed80ddc98acfa files/digest-scim-hangul-0.1.2 253
+SHA256 75a54296cf989d3acf74dd27dcf1b599f4ef3fcccbd4853dd5afa4b47c94afb2 files/digest-scim-hangul-0.1.2 253
+MD5 bdf5d832c34ec7961ca528542db2f825 files/digest-scim-hangul-0.2.1 256
+RMD160 161850ed7c1626b9a64d23b97b88f241c74de2f8 files/digest-scim-hangul-0.2.1 256
+SHA256 4b2495299180d1fb3137dd8202b754d1195b80ff0995d882d95ecb759caf1a12 files/digest-scim-hangul-0.2.1 256
 MD5 7e283eb08f6817c53740f7aa7c3a3a4a files/digest-scim-hangul-0.2.2 256
 RMD160 1145be50c8b07836366a019f6ad32018d3ad46fe files/digest-scim-hangul-0.2.2 256
 SHA256 9e3ef62c62020d3d7b95d6366634e0f68b27b8e836f0d04053f81ae6803b236b files/digest-scim-hangul-0.2.2 256
+MD5 f84b77f4e7645da93124145a13fba5fa files/digest-scim-hangul-0.3.0 256
+RMD160 98e19418826fea3cb9ef6794676ca542226723ea files/digest-scim-hangul-0.3.0 256
+SHA256 d91b527bdae6e5023a50edfdf81e1376395ed41e6e406e29eb9bb7320a17cde6 files/digest-scim-hangul-0.3.0 256
