@@ -1,1 +1,3 @@
 MD5 5ede8e3436009268972c2a74ab59d880 scim-hangul-0.1.2.tar.gz 621823
+RMD160 99a63fd5ff7b0d92ea8bda7ec95803d345bc25d6 scim-hangul-0.1.2.tar.gz 621823
+SHA256 6bf832dd0190bf4f6616c5336222434219eec8458519edb2ab090c2c4540d70f scim-hangul-0.1.2.tar.gz 621823
