@@ -1,1 +1,3 @@
 MD5 586dbd1c01d414125e1bb13821c57f93 scim-hangul-0.2.1.tar.gz 1345947
+RMD160 94a0812f69c482b8e2d424d06da17cde54d0bb21 scim-hangul-0.2.1.tar.gz 1345947
+SHA256 68d5e2b32484022b1185052671b1ceb4daa19cefee95c8446f0b18c106cbdf96 scim-hangul-0.2.1.tar.gz 1345947
