@@ -1,0 +1,3 @@
+MD5 c4104a268ffd6240a40f15ea2d0c25c2 scim-hangul-0.3.0.tar.gz 1233406
+RMD160 4316ecd0f680a76d686df20d9fd9d3507dfe4d1b scim-hangul-0.3.0.tar.gz 1233406
+SHA256 b6b4187685a68951ca8e7f71e47eef719b2d1a732c4499e1d8f04cfe292cfec6 scim-hangul-0.3.0.tar.gz 1233406
