@@ -1,6 +1,12 @@
 # ChangeLog for app-i18n/scim-hangul
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-i18n/cvs-repo/gentoo-x86/app-i18n/scim-hangul/ChangeLog,v 1.10 2006/06/03 10:51:48 matsuu Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-i18n/cvs-repo/gentoo-x86/app-i18n/scim-hangul/ChangeLog,v 1.11 2006/11/04 06:16:51 matsuu Exp $
+
+*scim-hangul-0.3.0 (04 Nov 2006)
+
+  04 Nov 2006; MATSUU Takuto <matsuu@gentoo.org> +scim-hangul-0.3.0.ebuild:
+  Version bumped.
+  Removed ~alpha and ~ppc for dependency.
 
 *scim-hangul-0.2.2 (03 Jun 2006)
 
